--- a/src/fpSolutions/fpSolutions.fsproj
+++ b/src/fpSolutions/fpSolutions.fsproj
@@ -3,9 +3,12 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
+    <AssemblyName>fpSolutions</AssemblyName>
+    <RootNamespace>fpSolutions</RootNamespace>
+    <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
   </PropertyGroup>
 
-  <ItemGroup><Compile Include="..\exams\exam_sample.fs" />
+  <ItemGroup>
     <!-- Include exercise source files -->
     <Compile Include="..\exercises\**\*.fs" />
     <!-- Include exam source files (compile before Program.fs) -->
